# McNoobsBot

./: bot.py  main.py  pyproject.toml  readme.md  readme.txt
